# code-context

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  Cargo.toml  LICENSE  Makefile  README.md  SECURITY.md  dist-workspace.toml  release-plz.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: ci.yml  release-plz.yml  release.yml
docs/: architecture.md  design-decisions.md
languages/: bash.scm  c.scm  cpp.scm  csharp.scm  go.scm  hcl.scm  java.scm  kotlin.scm  php.scm  python.scm  ruby.scm  rust.scm  scala.scm  swift.scm  typescript.scm
src/: main.rs  server.rs  state.rs
src/db/: mod.rs  queries.rs  schema.rs
src/indexer/: graph.rs  languages.rs  mod.rs  parser.rs  walker.rs
src/prompts/: mod.rs
src/resources/: mod.rs
src/semantic/: mod.rs
src/tools/: context.rs  graph.rs  indexing.rs  mod.rs  navigate.rs  search.rs
src/watcher/: mod.rs
