[package]
name = "code-context"
version = "0.1.0"
edition = "2024"
description = "MCP server providing deep codebase context via tree-sitter indexing"
license = "MIT"

[features]
default = []
semantic = ["dep:fastembed"]

[dependencies]
# MCP server
rmcp = { version = "1.1", features = ["server", "transport-streamable-http-server"] }

# HTTP / async
axum = "0.8"
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors"] }

# Parsing & graph construction
tree-sitter = "0.23"
tree-sitter-graph = "0.11"
streaming-iterator = "0.1"

# Language grammars (compiled-in)
tree-sitter-rust = "0.23"
tree-sitter-python = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-go = "0.23"
tree-sitter-java = "0.23"
tree-sitter-c = "0.23"
tree-sitter-cpp = "0.23"
tree-sitter-c-sharp = "0.23"
tree-sitter-ruby = "0.23"
tree-sitter-bash = "0.23"
tree-sitter-json = "0.23"
tree-sitter-toml-ng = "0.7"
tree-sitter-yaml = "0.7"
tree-sitter-html = "0.23"
tree-sitter-css = "0.25"
tree-sitter-php = "0.23"
tree-sitter-scala = "0.23"
tree-sitter-kotlin-ng = "1.1"
tree-sitter-swift = "0.7"
tree-sitter-hcl = "1.1"
tree-sitter-md = "0.5"

# Database
rusqlite = { version = "0.32", features = ["bundled"] }
r2d2 = "0.8"
r2d2_sqlite = "0.25"

# File watching
notify-debouncer-full = "0.4"
notify = "7"

# Semantic search (optional)
fastembed = { version = "5", optional = true }

# Core utilities
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
sha2 = "0.10"
ignore = "0.4"
regex = "1"
tokio-util = { version = "0.7", features = ["rt"] }
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
